--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^4.13.21",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
