--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "mongoose": "^4.13.21",
     "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "pug": "^3.0.2",
     "session-file-store": "^1.5.0"
   },
